--- a/plist/info.plist
+++ b/plist/info.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://192.168.**.***/test.ipa</string>
+                    <string>https://github.com/ioscn/DisApplication/ipa/Project.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
