--- a/plist/info.plist
+++ b/plist/info.plist
@@ -25,7 +25,7 @@
                 <key>releaseNotes</key>
                 <string>(releaseNotes:线下课)</string>
                 <key>title</key>
-                <string>大师圈</string>
+                <string>Project</string>
             </dict>
         </dict>
     </array>
